--- a/ISO_2024.md
+++ b/ISO_2024.md
@@ -18,7 +18,7 @@ The course schedule can be found [here](https://bioinformaticsdotca.github.io/IS
 
 # Pre-Workshop Materials <a id="preworkshop"></a>
 
-<!-- Pre-work including programs to install can be found [here]().   -->
+Pre-work including programs to install can be found [here](https://forms.gle/1rHwYRaYAnQWYQox7).  
 
 ***
 
