--- a/ISO_2024.md
+++ b/ISO_2024.md
@@ -30,6 +30,14 @@ Coming soon!
 ***
 
 # Day 1 <a id="day1"></a>
+
+## Module 1
+[Module 1 Lecture Slides](https://drive.google.com/file/d/1AMzkLfOpP-7A7xqEANqpTdZV7NCPErPy/view?usp=drive_link)  
  
+## Module 2 
+[Module 2 Lecture Slides](https://drive.google.com/file/d/139nnpSIyMRJahrzB87t7nQeS74k-KIWM/view?usp=sharing)  
+
+## Module 3
+[Module 3 Lecture Slides](https://drive.google.com/file/d/17q120xS7wV1T19dF4r-2enlxQYukRAkT/view?usp=drive_link)  
 
 # Day 2 <a id="day2"></a>  
