--- a/ISO_2024.md
+++ b/ISO_2024.md
@@ -10,8 +10,6 @@ image: /site_images/CBW_SpatialOmics_icon.png
 
 # Welcome <a id="welcome"></a>
 
-**This page is still being built. Please note that some links may be broken or out of date.**
-
 The course schedule can be found [here](https://bioinformaticsdotca.github.io/ISO_2024_schedule)
 
 <!-- Meet your faculty [here]().   -->
@@ -30,6 +28,9 @@ Coming soon!
 ***
 
 # Day 1 <a id="day1"></a>
+
+## Keynote
+[Keynote Slides](https://drive.google.com/file/d/1HmN82rBgHMZcTbL3a2yia0AVzpLn4rX0/view?usp=sharing)  
 
 ## Module 1
 [Module 1 Lecture Slides](https://drive.google.com/file/d/1AMzkLfOpP-7A7xqEANqpTdZV7NCPErPy/view?usp=drive_link)  
