--- a/ISO_2024.md
+++ b/ISO_2024.md
@@ -42,3 +42,9 @@ Coming soon!
 [Module 3 Lecture Slides](https://drive.google.com/file/d/17q120xS7wV1T19dF4r-2enlxQYukRAkT/view?usp=drive_link)  
 
 # Day 2 <a id="day2"></a>  
+
+## Module 4
+[Module 4 Lecture Slides](https://drive.google.com/file/d/1UM9B6s4qgZdHT44fbs8vAI1_a24h-8mL/view?usp=sharing)  
+
+## Modules 5 and 6
+[Modules 5 and 6 Lecture Slides](https://drive.google.com/file/d/1JBaWiZgUGaXDrkYkYwby8czhhTACepN2/view?usp=sharing)  
