--- a/ISO_2024.md
+++ b/ISO_2024.md
@@ -48,3 +48,6 @@ Coming soon!
 
 ## Modules 5 and 6
 [Modules 5 and 6 Lecture Slides](https://drive.google.com/file/d/1JBaWiZgUGaXDrkYkYwby8czhhTACepN2/view?usp=sharing)  
+
+## Wrap-up
+[Wrap-up Lecture Slides](https://drive.google.com/file/d/1B-oS0N3OtSyGPIVU-pkUUcnwA_Xp5cdN/view?usp=sharing)  
