--- a/ISO_2024.md
+++ b/ISO_2024.md
@@ -31,23 +31,33 @@ Coming soon!
 
 ## Keynote
 [Keynote Slides](https://drive.google.com/file/d/1HmN82rBgHMZcTbL3a2yia0AVzpLn4rX0/view?usp=sharing)  
+[Keynote Recording](https://youtu.be/j9cwUkbqFPE)  
 
 ## Module 1
 [Module 1 Lecture Slides](https://drive.google.com/file/d/1AMzkLfOpP-7A7xqEANqpTdZV7NCPErPy/view?usp=drive_link)  
+[Module 1.1 Lecture Recording](https://youtu.be/lTAeQU1zKFk)  
+[Module 1.2 Lecture Recording](https://youtu.be/5Kp58g55_6E)  
+[Module 1.3 Lecture Recording](https://youtu.be/SJfP3Q07yXY)  
+[Module 1.4 Lecture Recording](https://youtu.be/mETIeI6iB9o)  
  
 ## Module 2 
 [Module 2 Lecture Slides](https://drive.google.com/file/d/139nnpSIyMRJahrzB87t7nQeS74k-KIWM/view?usp=sharing)  
+[Module 2 Lecture Recording](https://youtu.be/29ZEI9hJTQo)  
 
 ## Module 3
 [Module 3 Lecture Slides](https://drive.google.com/file/d/17q120xS7wV1T19dF4r-2enlxQYukRAkT/view?usp=drive_link)  
+[Module 3 Lecture Recording](https://youtu.be/TvxNtyzmp2Q)  
 
 # Day 2 <a id="day2"></a>  
 
 ## Module 4
 [Module 4 Lecture Slides](https://drive.google.com/file/d/1UM9B6s4qgZdHT44fbs8vAI1_a24h-8mL/view?usp=sharing)  
+[Module 4 Lecture Recording](https://youtu.be/8AcF-dS6UGg)  
 
 ## Modules 5 and 6
 [Modules 5 and 6 Lecture Slides](https://drive.google.com/file/d/1JBaWiZgUGaXDrkYkYwby8czhhTACepN2/view?usp=sharing)  
+[Modules 5 and 6 Lecture Recording](https://youtu.be/MOnhhPNKXig)  
 
 ## Wrap-up
 [Wrap-up Lecture Slides](https://drive.google.com/file/d/1B-oS0N3OtSyGPIVU-pkUUcnwA_Xp5cdN/view?usp=sharing)  
+[Wrap-up Lecture Recording](https://youtu.be/HfkE7eSQMPg)  
