--- a/ISO_2024.md
+++ b/ISO_2024.md
@@ -61,3 +61,21 @@ Coming soon!
 ## Wrap-up
 [Wrap-up Lecture Slides](https://drive.google.com/file/d/1B-oS0N3OtSyGPIVU-pkUUcnwA_Xp5cdN/view?usp=sharing)  
 [Wrap-up Lecture Recording](https://youtu.be/HfkE7eSQMPg)  
+
+# Post-Workshop Materials <a id="postworkshop"></a>
+## CourseData
+Note that some of these files are quite large. If you have issues downloading them, try copying the link address, opening a new blank tab, and entering the URL into the new tab's address bar. If that fails, contact us at support@bioinformatics.ca.
+- [data](https://hpc4health.ca/cbw/2024/ISO/data.tar.gz)
+- [images](https://hpc4health.ca/cbw/2024/ISO/images.tar.gz)
+- [spatial_analysis_workshop](https://hpc4health.ca/cbw/2024/ISO/spatial_analysis_workshop_iso2024.tar.gz)
+
+## AMI
+We have made our AWS AMI (Amazon Machine Image) publicly available. To launch your own instance, follow the instructions provided by Amazon on [how to launch an EC2 instance from a custom Amazon Machine Image](https://repost.aws/knowledge-center/launch-instance-custom-ami). Please note that you will need an AWS account to proceed, and that you will need to upload the CourseData files yourself.
+
+Here are the details of the AMI:
+- AWS Region: us-east-1 (N. Virgina)
+- AMI type: public image
+- AMI name: CBW_ISO_240702
+- AMI ID: ami-0e35aedc51010d5b4
+
+If you want to create and activate a new AWS account, please follow the [instructions](https://aws.amazon.com/premiumsupport/knowledge-center/create-and-activate-aws-account/) provided by Amazon.
