--- a/ISO_2024.md
+++ b/ISO_2024.md
@@ -28,7 +28,7 @@ Coming soon!
 ***
 
 # Scripts
-[All scripts are available here in both Python Notebook and HTML format.](https://drive.google.com/drive/folders/1xyzVan5hEMqWREDgX8ykdDW0F8AmftWV?usp=sharing) Download links to data and instructions to create an Amazon Machine Image are available at the bottom of this page. 
+[All scripts are available here in both Python Notebook and HTML format.](https://github.com/dr-sayyadhury/Introductory_Spatial_Analysis_Workshop___ISO_2024) Download links to data and instructions to create an Amazon Machine Image are available at the bottom of this page. 
 
 # Day 1 <a id="day1"></a>
 
